# aas-uns-bridge

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
config/: config.example.yaml  mappings.example.yaml
docker/: Dockerfile  docker-compose.emqx.yml  docker-compose.hivemq.yml  docker-compose.mosquitto.yml  docker-compose.test.yml  docker-compose.yml
docker/mosquitto/: mosquitto.conf
docs/: deployment.md  runbook.md  security-hardening.md
docs/trl/: README.md
monitoring/: README.md
monitoring/grafana/: README.md  aas-bridge-dashboard.json
monitoring/prometheus/: README.md  alerting-rules.yaml
proto/: sparkplug_b.proto
src/aas_uns_bridge/: __init__.py  __main__.py  cli.py  config.py  daemon.py  py.typed
systemd/: aas-uns-bridge.service
tests/: __init__.py  conftest.py
tests/chaos/: __init__.py  conftest.py  test_broker_restart.py  test_disk_full.py  test_network_partition.py  test_resource_exhaustion.py
tests/e2e/: __init__.py  conftest.py  test_dual_plane.py  test_malformed_aas.py  test_restart_resilience.py  test_sparkplug_e2e.py  test_uns_e2e.py
tests/fixtures/: generate_fixtures.py  malformed_empty_collection.json  malformed_invalid_json.json  malformed_missing_idshort.json  malformed_missing_semanticid.json  sample_robot.json  sample_sensor.json  test_config.yaml  test_mappings.yaml
tests/integration/: __init__.py  test_retained_publish.py  test_sparkplug_birth.py
tests/load/: __init__.py  test_publish_throughput.py
tests/security/: __init__.py  conftest.py  test_config_injection.py  test_topic_fuzzing.py
tests/soak/: __init__.py  test_14_day_endurance.py
tests/stability/: __init__.py  conftest.py  test_memory_stability.py
tests/unit/: __init__.py  test_alias_db_limits.py  test_asset_lifecycle.py  test_bidirectional_audit.py  test_bidirectional_sync.py  test_drift_detector.py  test_fidelity.py  (+12 more)
(+48 files in other folders)
